--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Taller3"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
+
+        <activity android:name=".InicioActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Taller3">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".MainActivity" />
+        <activity android:name=".SettingsActivity" />
+
     </application>
 
 </manifest>
